Made validations for the creation form

--- a/index.html
+++ b/index.html
@@ -13,43 +13,256 @@
         <div class="bg-circle">
             <div class="title" hidden="start false">
                 <h1 class="term">PASAPALABRA</h1>
-                <h5 class="game">Titulo</h5>
+                <input class="game-title" type="text" placeholder="Enter title..." incomplete="true">
             </div>
             <div class="register" hidden="start true">
-                <span>Palabra</span>
+                <button type="button" class="return">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                        <path fill="currentColor" d="M8 7v4L2 6l6-5v4h5a8 8 0 1 1 0 16H4v-2h9a6 6 0 0 0 0-12z" />
+                    </svg>
+                </button>
+                <span>Word</span>
                 <input class="word" />
-                <span>Pista</span>
-                <textarea class="hint">das</textarea>
+                <span>Hint</span>
+                <textarea class="hint"></textarea>
                 <button type="button" class="submit">Submit</button>
             </div>
         </div>
         <div class="circle-container">
-            <div class="letter">G</div>
-            <div class="letter">H</div>
-            <div class="letter">I</div>
-            <div class="letter">J</div>
-            <div class="letter">K</div>
-            <div class="letter">L</div>
-            <div class="letter">M</div>
-            <div class="letter">N</div>
-            <div class="letter">O</div>
-            <div class="letter">P</div>
-            <div class="letter">Q</div>
-            <div class="letter">R</div>
-            <div class="letter">S</div>
-            <div class="letter">T</div>
-            <div class="letter">U</div>
-            <div class="letter">V</div>
-            <div class="letter">W</div>
-            <div class="letter">X</div>
-            <div class="letter">Y</div>
-            <div class="letter">Z</div>
-            <div class="letter">A</div>
-            <div class="letter">B</div>
-            <div class="letter">C</div>
-            <div class="letter">D</div>
-            <div class="letter">E</div>
-            <div class="letter">F</div>
+            <div class="letter" incomplete="true">G
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                    <g fill="none" stroke="currentColor" stroke-width="1">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="3"
+                            d="M13.253 5.98L12 13.5l-1.253-7.52a1.27 1.27 0 1 1 2.506 0" />
+                        <circle cx="12" cy="19" r="1" stroke-width="2" />
+                    </g>
+                </svg>
+            </div>
+            <div class="letter" incomplete="true">H
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                    <g fill="none" stroke="currentColor" stroke-width="1">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="3"
+                            d="M13.253 5.98L12 13.5l-1.253-7.52a1.27 1.27 0 1 1 2.506 0" />
+                        <circle cx="12" cy="19" r="1" stroke-width="2" />
+                    </g>
+                </svg>
+            </div>
+            <div class="letter" incomplete="true">I
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                    <g fill="none" stroke="currentColor" stroke-width="1">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="3"
+                            d="M13.253 5.98L12 13.5l-1.253-7.52a1.27 1.27 0 1 1 2.506 0" />
+                        <circle cx="12" cy="19" r="1" stroke-width="2" />
+                    </g>
+                </svg>
+            </div>
+            <div class="letter" incomplete="true">J
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                    <g fill="none" stroke="currentColor" stroke-width="1">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="3"
+                            d="M13.253 5.98L12 13.5l-1.253-7.52a1.27 1.27 0 1 1 2.506 0" />
+                        <circle cx="12" cy="19" r="1" stroke-width="2" />
+                    </g>
+                </svg>
+            </div>
+            <div class="letter" incomplete="true">K
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                    <g fill="none" stroke="currentColor" stroke-width="1">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="3"
+                            d="M13.253 5.98L12 13.5l-1.253-7.52a1.27 1.27 0 1 1 2.506 0" />
+                        <circle cx="12" cy="19" r="1" stroke-width="2" />
+                    </g>
+                </svg>
+            </div>
+            <div class="letter" incomplete="true">L
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                    <g fill="none" stroke="currentColor" stroke-width="1">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="3"
+                            d="M13.253 5.98L12 13.5l-1.253-7.52a1.27 1.27 0 1 1 2.506 0" />
+                        <circle cx="12" cy="19" r="1" stroke-width="2" />
+                    </g>
+                </svg>
+            </div>
+            <div class="letter" incomplete="true">M
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                    <g fill="none" stroke="currentColor" stroke-width="1">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="3"
+                            d="M13.253 5.98L12 13.5l-1.253-7.52a1.27 1.27 0 1 1 2.506 0" />
+                        <circle cx="12" cy="19" r="1" stroke-width="2" />
+                    </g>
+                </svg>
+            </div>
+            <div class="letter" incomplete="true">N
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                    <g fill="none" stroke="currentColor" stroke-width="1">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="3"
+                            d="M13.253 5.98L12 13.5l-1.253-7.52a1.27 1.27 0 1 1 2.506 0" />
+                        <circle cx="12" cy="19" r="1" stroke-width="2" />
+                    </g>
+                </svg>
+            </div>
+            <div class="letter" incomplete="true">O
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                    <g fill="none" stroke="currentColor" stroke-width="1">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="3"
+                            d="M13.253 5.98L12 13.5l-1.253-7.52a1.27 1.27 0 1 1 2.506 0" />
+                        <circle cx="12" cy="19" r="1" stroke-width="2" />
+                    </g>
+                </svg>
+            </div>
+            <div class="letter" incomplete="true">P
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                    <g fill="none" stroke="currentColor" stroke-width="1">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="3"
+                            d="M13.253 5.98L12 13.5l-1.253-7.52a1.27 1.27 0 1 1 2.506 0" />
+                        <circle cx="12" cy="19" r="1" stroke-width="2" />
+                    </g>
+                </svg>
+            </div>
+            <div class="letter" incomplete="true">Q
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                    <g fill="none" stroke="currentColor" stroke-width="1">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="3"
+                            d="M13.253 5.98L12 13.5l-1.253-7.52a1.27 1.27 0 1 1 2.506 0" />
+                        <circle cx="12" cy="19" r="1" stroke-width="2" />
+                    </g>
+                </svg>
+            </div>
+            <div class="letter" incomplete="true">R
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                    <g fill="none" stroke="currentColor" stroke-width="1">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="3"
+                            d="M13.253 5.98L12 13.5l-1.253-7.52a1.27 1.27 0 1 1 2.506 0" />
+                        <circle cx="12" cy="19" r="1" stroke-width="2" />
+                    </g>
+                </svg>
+            </div>
+            <div class="letter" incomplete="true">S
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                    <g fill="none" stroke="currentColor" stroke-width="1">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="3"
+                            d="M13.253 5.98L12 13.5l-1.253-7.52a1.27 1.27 0 1 1 2.506 0" />
+                        <circle cx="12" cy="19" r="1" stroke-width="2" />
+                    </g>
+                </svg>
+            </div>
+            <div class="letter" incomplete="true">T
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                    <g fill="none" stroke="currentColor" stroke-width="1">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="3"
+                            d="M13.253 5.98L12 13.5l-1.253-7.52a1.27 1.27 0 1 1 2.506 0" />
+                        <circle cx="12" cy="19" r="1" stroke-width="2" />
+                    </g>
+                </svg>
+            </div>
+            <div class="letter" incomplete="true">U
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                    <g fill="none" stroke="currentColor" stroke-width="1">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="3"
+                            d="M13.253 5.98L12 13.5l-1.253-7.52a1.27 1.27 0 1 1 2.506 0" />
+                        <circle cx="12" cy="19" r="1" stroke-width="2" />
+                    </g>
+                </svg>
+            </div>
+            <div class="letter" incomplete="true">V
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                    <g fill="none" stroke="currentColor" stroke-width="1">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="3"
+                            d="M13.253 5.98L12 13.5l-1.253-7.52a1.27 1.27 0 1 1 2.506 0" />
+                        <circle cx="12" cy="19" r="1" stroke-width="2" />
+                    </g>
+                </svg>
+            </div>
+            <div class="letter" incomplete="true">W
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                    <g fill="none" stroke="currentColor" stroke-width="1">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="3"
+                            d="M13.253 5.98L12 13.5l-1.253-7.52a1.27 1.27 0 1 1 2.506 0" />
+                        <circle cx="12" cy="19" r="1" stroke-width="2" />
+                    </g>
+                </svg>
+            </div>
+            <div class="letter" incomplete="true">X
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                    <g fill="none" stroke="currentColor" stroke-width="1">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="3"
+                            d="M13.253 5.98L12 13.5l-1.253-7.52a1.27 1.27 0 1 1 2.506 0" />
+                        <circle cx="12" cy="19" r="1" stroke-width="2" />
+                    </g>
+                </svg>
+            </div>
+            <div class="letter" incomplete="true">Y
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                    <g fill="none" stroke="currentColor" stroke-width="1">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="3"
+                            d="M13.253 5.98L12 13.5l-1.253-7.52a1.27 1.27 0 1 1 2.506 0" />
+                        <circle cx="12" cy="19" r="1" stroke-width="2" />
+                    </g>
+                </svg>
+            </div>
+            <div class="letter" incomplete="true">Z
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                    <g fill="none" stroke="currentColor" stroke-width="1">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="3"
+                            d="M13.253 5.98L12 13.5l-1.253-7.52a1.27 1.27 0 1 1 2.506 0" />
+                        <circle cx="12" cy="19" r="1" stroke-width="2" />
+                    </g>
+                </svg>
+            </div>
+            <div class="letter" incomplete="true">A
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                    <g fill="none" stroke="currentColor" stroke-width="1">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="3"
+                            d="M13.253 5.98L12 13.5l-1.253-7.52a1.27 1.27 0 1 1 2.506 0" />
+                        <circle cx="12" cy="19" r="1" stroke-width="2" />
+                    </g>
+                </svg>
+            </div>
+            <div class="letter" incomplete="true">B
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                    <g fill="none" stroke="currentColor" stroke-width="1">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="3"
+                            d="M13.253 5.98L12 13.5l-1.253-7.52a1.27 1.27 0 1 1 2.506 0" />
+                        <circle cx="12" cy="19" r="1" stroke-width="2" />
+                    </g>
+                </svg>
+            </div>
+            <div class="letter" incomplete="true">C
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                    <g fill="none" stroke="currentColor" stroke-width="1">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="3"
+                            d="M13.253 5.98L12 13.5l-1.253-7.52a1.27 1.27 0 1 1 2.506 0" />
+                        <circle cx="12" cy="19" r="1" stroke-width="2" />
+                    </g>
+                </svg>
+            </div>
+            <div class="letter" incomplete="true">D
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                    <g fill="none" stroke="currentColor" stroke-width="1">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="3"
+                            d="M13.253 5.98L12 13.5l-1.253-7.52a1.27 1.27 0 1 1 2.506 0" />
+                        <circle cx="12" cy="19" r="1" stroke-width="2" />
+                    </g>
+                </svg>
+            </div>
+            <div class="letter" incomplete="true">E
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                    <g fill="none" stroke="currentColor" stroke-width="1">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="3"
+                            d="M13.253 5.98L12 13.5l-1.253-7.52a1.27 1.27 0 1 1 2.506 0" />
+                        <circle cx="12" cy="19" r="1" stroke-width="2" />
+                    </g>
+                </svg>
+            </div>
+            <div class="letter" incomplete="true">F
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                    <g fill="none" stroke="currentColor" stroke-width="1">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="3"
+                            d="M13.253 5.98L12 13.5l-1.253-7.52a1.27 1.27 0 1 1 2.506 0" />
+                        <circle cx="12" cy="19" r="1" stroke-width="2" />
+                    </g>
+                </svg>
+            </div>
         </div>
     </div>
 
