Finalized polishing animations and page scalability

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
         </div>
     </div>
 
-    <button type="button" class="create">Create</button>
+    <button type="button" class="create" disabled="true">Create</button>
 
     <script src="./js/circle-container.js"></script>
     <script src="./js/register-pasapalabra.js"></script>
